# DuckWild

./: .gitignore  accuracy.py  camera_cli.py  detect.py  draw_boxes_detect.py  duck.py  hello.py  normal.py  packet.py  pi_setup.sh  pyproject.toml  receive_example.py  send_example.py  state_machine.py  state_test.py  sys_modules.py  take_pic_when_motion.py  wild_duck.py  wild_duck_02W.py  wild_duckv2.py  wild_duckv3.py  wild_duckv4.py
