[project]
name = "duckwild"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "LoRaRF",
    "gpiod>=2.4.0",
    "picamera2>=0.3.33",
    "rpi-lgpio>=0.6",
]

[tool.uv.sources]
LoRaRF = { url = "https://www.waveshare.net/w/upload/a/a1/Sx126x_lorawan_hat_code.zip", subdirectory = "python/lora" }

[tool.uv]
override-dependencies = [
    # Not used anymore, we use rpi-lgpio
    "RPi.GPIO; sys_platform == 'never'"
]
